Sharing the HTTP Port of our localhost

--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -36,5 +36,10 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script>
+      var remote = require("electron").remote
+      var sharedPort = remote.getGlobal('sharedPort')
+      window.sharedPort = sharedPort;
+    </script>
   </body>
 </html>
