--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -20,6 +20,11 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Nomadcoin Wallet</title>
+    <style>
+      body {
+        background-color: #f2f6fa;
+      }
+    </style>
   </head>
   <body>
     <noscript>
